[project]
name = "secure-locker-api"
version = "0.1.0"
description = "Secure locker API with FastAPI, JWT, Encryption"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "python-dotenv",
  "passlib[bcrypt]",
  "cryptography",
  "python-jose",
  "pydantic"
]
